<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quadball Timer</string>

    <!-- MAIN ACTIVITY -->
    <string name="settings_button">Settings</string>

    <string name="blank_seconds">00:00</string>
    <string name="blank_seconds_milli">00:00.0</string>
    <string name="ten_minutes">10:00.0</string>
    <string name="ten_minutes_no_milli">10:00</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset Timer</string>

    <string name="flag_runner">Flag Runner</string>

    <string name="increase_left_score">Increase Left Score</string>
    <string name="decrease_left_score">Decrease Left Score</string>
    <string name="increase_right_score">Increase Right Score</string>
    <string name="decrease_right_score">Decrease Right Score</string>
    <string name="score_separator">:</string>
    <string name="initial_score">000</string>

    <string name="timeout">TIMEOUT</string>
    <string name="reduce_timeout">-1</string>
    <string name="increase_timeout">+1</string>
    <string name="clear_timeout">CLEAR TIMEOUT</string>

    <string name="foul_card">Foul Card section</string>
    <string name="blue">1 Minute</string>
    <string name="blue_card_button">Blue Card</string>
    <string name="yellow">1 Minute</string>
    <string name="yellow_card_button">Yellow Card</string>
    <string name="red">2 Minutes</string>
    <string name="red_card_button">Red Card</string>
    <plurals name="minutes">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>

    <string name="clear_card_timer">Clear Card %1$d</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Timer Expirations</string>
    <string name="notification_channel_description">Notification alerts when timer expires and app is running in the background</string>
    <string name="notification_channel_id">TIMER NOTIFICATIONS</string>
    <string name="notification_timer_title">Timer Expired</string>
    <string name="notification_timeout_desc">The timeout timer has expired</string>
    <string name="notification_flag_desc">The flag timer has expired</string>
    <string name="notification_fc_desc">Foul card %1$d has expired</string>
    <string name="notification_heat_desc">Heat timer has expired</string>

    <!-- Heat alert dialog -->
    <string name="heat_title">Heat timer expired</string>
    <string name="heat_message">The heat timer has expired</string>
    <string name="heat_positive">OK</string>

    <!-- Reset alert dialog -->
    <string name="reset_title">Confirm</string>
    <string name="reset_message">Are you sure you want to reset the timer?</string>
    <string name="reset_positive">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="timers_header">Timer Lengths (Minutes)</string>
    <string name="other_header">Other Settings</string>
    <string name="about_header">About</string>

    <!-- Timer Length Preferences -->
    <string name="flag_length_key">flagLength</string>
    <string name="set_length_flag_t">Secondary timer length</string>
    <string name="timeout_length_key">timeoutLength</string>
    <string name="set_length_timeout_t">Timeout timer length</string>
    <string name="blue_length_key">yellow0Length</string>
    <string name="set_length_blue_card_t">Blue Card timer length</string>
    <string name="yellow_length_key" tools:ignore="Typos">yellow1Length</string>
    <string name="set_length_yellow_card_t">Yellow Card timer length</string>
    <string name="red_length_key">yellow2Length</string>
    <string name="set_length_red_card_t">Red Card timer length</string>
    <string name="heat_length_key">heatLength</string>
    <string name="set_length_heat_t">Repeating heat timer length</string>

    <!-- Other Settings Preferences -->
    <string name="score_inc_key">scoreInc</string>
    <string name="set_score_inc">Score increment</string>
    <string name="audio_vol_key">audioVol</string>
    <string name="set_audio_vol">Audio volume</string>
    <string name="vibe_on_key">vibeOn</string>
    <string name="set_vibe_on">Vibration on timer expiration</string>
    <string name="dark_mode_key">darkMode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="confirm_reset_key">confirmReset</string>
    <string name="set_reset_confirmation">Display \"Confirm Reset\" popup</string>

    <!-- About Section -->
    <string name="version">Version</string>
    <!-- version_name is defined in build.gradle -->
    <string name="IQA">What is Quadball?</string>
    <string name="IQA_link">https://iqasport.org/play</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_link">https://benrpinto.github.io/benrpinto/quadball_timer_privacy_policy/index.html</string>
    <string name="donation">Support me on Ko-fi</string>
    <string name="donation_link">https://ko-fi.com/bookofben</string>
    <string name="repo">View Source Code</string>
    <string name="repo_link">https://github.com/benrpinto/SportsTimer</string>

</resources>