<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chronometer"
        tools:text="@string/ten_minutes"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/settingsButton"
        app:srcCompat="@drawable/settings_cog"
        android:contentDescription="@string/settings_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        app:srcCompat="@drawable/flag_runner"
        android:contentDescription="@string/flag_runner"
        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"/>

    <TextView
        android:id="@+id/flagCountdown"
        tools:text="@string/ten_minutes"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"/>

    <ImageButton
        android:id="@+id/scoreUpLeft"
        app:srcCompat="@drawable/triangle_up"
        android:contentDescription="@string/increase_left_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/scoreDownLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <ImageButton
        android:id="@+id/scoreUpRight"
        app:srcCompat="@drawable/triangle_up"
        android:contentDescription="@string/increase_right_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="@+id/scoreDownRight"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/scoreLeft"
        android:text="@string/initial_score"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/scoreDownLeft"
        app:layout_constraintStart_toStartOf="@+id/scoreDownLeft"
        app:layout_constraintTop_toBottomOf="@+id/scoreUpLeft"/>

    <TextView
        android:id="@+id/scoreSeparator"
        android:text="@string/score_separator"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreUpLeft"/>

    <TextView
        android:id="@+id/scoreRight"
        android:text="@string/initial_score"
        android:textSize="60sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/scoreDownRight"
        app:layout_constraintStart_toStartOf="@+id/scoreDownRight"
        app:layout_constraintTop_toBottomOf="@+id/scoreUpRight"/>

    <ImageButton
        android:id="@+id/scoreDownLeft"
        app:srcCompat="@drawable/triangle_down"
        android:contentDescription="@string/decrease_left_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/timeout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLeft"/>

    <ImageButton
        android:id="@+id/scoreDownRight"
        app:srcCompat="@drawable/triangle_down"
        android:contentDescription="@string/decrease_right_score"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeout"
        app:layout_constraintTop_toBottomOf="@+id/scoreRight"/>

    <Button
        android:id="@+id/timeout"
        android:text="@string/timeout"
        tools:text ="@string/clear_timeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreSeparator"/>

    <TableRow
        android:id="@+id/timeoutRow"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDownLeft">

        <Button
            android:id="@+id/minus1"
            android:text="@string/reduce_timeout"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/timeoutCounter"
            tools:text = "@string/ten_minutes_no_milli"
            android:countDown="true"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/plus1"
            android:text="@string/increase_timeout"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </TableRow>

    <Button
        android:id="@+id/blue"
        android:text="@string/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?blueButton"
        android:contentDescription="@string/blue_card_button"
        android:padding="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeoutRow"/>

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?yellowButton"
        android:contentDescription="@string/yellow_card_button"
        android:padding="20dp"
        android:text="@string/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeoutRow" />

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?redButton"
        android:contentDescription="@string/red_card_button"
        android:padding="20dp"
        android:text="@string/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yellow"
        app:layout_constraintTop_toBottomOf="@+id/timeoutRow" />

    <ScrollView
        android:contentDescription="@string/foul_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            tools:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/cardTable"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15sp"/>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/playPauseButton"
        app:srcCompat="@drawable/play"
        android:contentDescription="@string/play_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/resetButton"
        app:srcCompat="@drawable/reset"
        android:contentDescription="@string/reset_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>